<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    tools:context="com.example.roundprogressbar.useStep">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/navbar2x"
                android:scaleType="fitXY"/>
        <ImageView
            android:id="@+id/step_back"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/back_p2x"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/useS_text"
            android:textSize="25sp"
            android:layout_toRightOf="@+id/step_back"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/wtext"
            />
        </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/us_text1"
            android:textSize="20sp"
            android:background="@drawable/textshape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:src="@drawable/us1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/us_text2"
            android:textSize="20sp"
            android:background="@drawable/textshape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:src="@drawable/us2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/us_text3"
            android:textSize="20sp"
            android:background="@drawable/textshape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:src="@drawable/us3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/us_text4"
            android:textSize="20sp"
            android:background="@drawable/textshape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:src="@drawable/us4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/us_text5"
            android:textSize="20sp"
            android:background="@drawable/textshape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:src="@drawable/us5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/us_text6"
            android:textSize="20sp"
            android:background="@drawable/textshape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:src="@drawable/us6"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/us_text7"
            android:textSize="20sp"
            android:background="@drawable/textshape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>